Fix incorrect input fields' behaviour on Safari (box-shadow)

--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -59,6 +59,7 @@
     display: block;
     height: 36px;
     font-size: 14px;
+    -webkit-appearance: none;
 
     &--theme {
       &_paper {
